--- a/app/globals.css
+++ b/app/globals.css
@@ -83,6 +83,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  height: 100%;
 }
 
 body {
@@ -93,6 +94,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  height: 100%;
 }
 
 a {
@@ -104,4 +106,6 @@ a {
   html {
     color-scheme: dark;
   }
+  min-height: 100vh;
+  height: 100%;
 }
