--- a/app/(auth)/login/Login.module.scss
+++ b/app/(auth)/login/Login.module.scss
@@ -7,3 +7,10 @@
   flex-direction: column;
   gap: 20px;
 }
+
+.oauthWrapper {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 20px;
+}
